fixed gap between header and jumbotron, had an - behind the closing header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    margin: 0;
 }
 header h1 {
     font-weight: bold;
